[setup spark] - DEBUG: insert DB failed